# Block-Craft-3D

./: CMakeLists.txt  README.md
glad/include/glad/: gl.h
include/: application.hpp  camera.hpp  index_buffer.hpp  shader_program.hpp  texture.hpp  vector.hpp  vertex_buffer.hpp  window.hpp
shaders/: fragment.glsl  vertex.glsl
src/: application.cpp  camera.cpp  index_buffer.cpp  main.cpp  shader_program.cpp  texture.cpp  vertex_buffer.cpp  window.cpp
